[package]
name = "texclean"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["tex", "latex", "cli", "cleanup", "clean"]
categories = ["command-line-utilities"]
authors = ["Stefan Volz"]
repository = "https://github.com/SV-97/texclean"
readme = "README.md"
description = "Recursively clean all LaTeX projects in a given directory"

[package.metadata.wix]
upgrade-guid = "5E6F766E-73C4-42DF-BF90-F62BFA8CD14B"
path-guid = "EDE76AFD-CCC4-4115-9D59-1FE960FF8575"
license = false
eula = false

[dependencies]
clap = { version = "4.5.3", features = ["cargo"] }
fs_extra = "1.3.0"
inquire = "0.7.1"
spinoff = "0.8.0"
walkdir = "2"

[lints.rust]
unsafe_code = "forbid"
